@@ -1,6 +1,9 @@
 "8b15????????535657f682????????01":
 __thiscall void Menu_Stats::Update();
 
+"538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505381ecb0010000a1????????33c58945??5657508d45??64a3????????8bf9a1":
+__thiscall void Menu_Stats::UpdateSecrets();
+
 "558bec83ec5ca1????????33c58945??a1":
 __thiscall void Menu_Stats::Render();
 
