@@ -28,6 +28,7 @@ Fixes:
 * Fixed binder for Entity:ComputeStatusEffectDuration
 * Fixed pause menu modded marks rendering over the controller disconected popup
 * Fixed DamageFlag.DAMAGE_RED_HEARTS / .DAMAGE_NO_PENALTIES / .DAMAGE_FAKE not working when adding them via MC_ENTITY_TAKE_DMG's return table.
+* Fixed an issue on xmldata that created extra ghost entries on some nodetypes when asking for stuff that isnt there
 /newline/
 /newline/
 v1.0.5a -
